--- a/src/styles.css
+++ b/src/styles.css
@@ -40,6 +40,29 @@ h2 {
     opacity: 0.4;
 }
 
+.footer {
+    position: fixed;
+    padding-top: 10px;
+    left: 0;
+    bottom: 0;
+    padding-right: 10px;
+    width: 100%;
+    background-color: rgba(255, 255, 255, 0);
+    
+    /* opacity: 0.1; */
+    /* color: black; */
+    text-align: right;
+
+}
+
+.black-text {
+    /* color: rgba(0, 0, 0, 1); */
+    color: rgba(128, 128, 128, 1);
+    
+}
+
+
+
 
 
 
