--- a/src/styles.css
+++ b/src/styles.css
@@ -13,7 +13,7 @@ background-repeat: no-repeat;
     /* overflow: hidden;   */
 }
 
-h1, h2 {
+h1, h2, h3 {
     color: white; 
     text-align: center;
     font-weight: lighter;
@@ -28,6 +28,13 @@ h2 {
     font-size: 24px;
 }
 
+h3 {
+    font-size: 20px;
+}
+
+p {
+    color: white;
+}
 
 .dev-info {
     margin-top: 350px;
@@ -43,13 +50,28 @@ h2 {
 .projects h1 {
     font-size: 35px;
     margin-top: 75px;
-    display: block;
-     
+    display: block; 
 }
 
-.product-description {
-    background-color:rgb(78, 78, 78);
+.projects h3 {
+    font-weight: 500;
+    margin-bottom: 0;
 }
+
+.projects p {
+    text-align: center;
+    margin-bottom: 3px;
+}
+
+.project-description .btn-primary {
+    font-size: 11px;
+    margin-top: 10px;
+    padding: 5px;
+}
+
+/* .project-description {
+    background-color:rgb(36, 35, 35);
+} */
 
 .transparent {
     background-color: #ffffff;
@@ -63,12 +85,12 @@ h2 {
     bottom: 0;
     padding-right: 10px;
     width: 100%;
-    
+    text-align: right;
     /* background-color: rgba(255, 255, 255, 0); */
     
     /* opacity: 0.1; */
     /* color: black; */
-    text-align: right;
+    
 }
 
 .black-text {
@@ -76,7 +98,7 @@ h2 {
     color: rgba(128, 128, 128, 1);      
 }
 
-@media (max-width: 960px) {
+@media (max-width: 760px) {
     .footer {
         background-color: rgb(155, 155, 155);
     }
