--- a/src/styles.css
+++ b/src/styles.css
@@ -2,7 +2,7 @@
 /* best image size at least or so: 6016px x 4016px */
 
 body {
-    background-image: url("/images-2/techpic3.jpg");
+    background-image: url("/images-3/15.jpg");
     background-position: center center; 
     background-repeat: no-repeat;
     background-attachment: fixed;
@@ -68,7 +68,7 @@ p {
 .transparent-field {
     /* background-color: #ffffff;
     opacity: 0.6; */
-    background: rgba(205, 133, 63, 0.6)
+    background: rgba(23, 41, 29, 0.6)
 }
 
 
