Updated background image, navigation bar links, and footer on homepage

--- a/src/styles.css
+++ b/src/styles.css
@@ -2,7 +2,7 @@
 /* best image size at least or so: 6016px x 4016px */
 
 body {
-    background-image: url("/images/coding.jpg");
+    background-image: url("/images-3/15-wide-4.jpg");
     background-position: center center; 
     background-repeat: no-repeat;
     background-attachment: fixed;
@@ -130,25 +130,25 @@ hr {
     left: 0;
     bottom: 0;
     width: 100%;
+    text-align: right;
     /* padding-left: 75px; */
     /* margin-left: 1550px; */
-    
-   
+
     /* opacity: 0.1; */
     /* color: black; */
+}
+
+.footer-home a {
+    text-decoration: none;
 }
 
 .footer-home-text {
     /* color: white; */
     /* color: rgb(255, 251, 2); */
-    color:rgb(170, 252, 7);text-align: right;
+    color:rgb(170, 252, 7);
     padding: 0px 4px 10px 15px;
-    /* padding-left: 15px;
-    padding-bottom: 10px;
-    padding-right: 2px; */
-   background-color: rgba(23, 41, 29, 0.4);
+   background-color: rgba(23, 41, 29, 0.5);
    display: inline;
- 
 }
 
 .footer-home .photo-credit {
@@ -219,12 +219,24 @@ footer .social-links a  {
 
 @media (max-width: 960px) {
     .dev-info {
-        line-height: 1;
-        margin-top: 175px;
+        margin-top: 235px;
     }
 
-    .footer-home {
+    .dev-info h1 {
+        line-height: 1;
+        font-size: 95px;
+        /* margin-top: 75px; */
+    }
+
+
+
+    /* .footer-home {
         background-color: rgba(155, 155, 155, 0.6)
+ 
+    } */
+
+    .footer-home-text {
+        font-size: 13px;
     }
 
     .black-text {
