--- a/src/styles.css
+++ b/src/styles.css
@@ -8,7 +8,7 @@
 }
 
 body {
-    background-image: url("/images-3/15-wide-4.jpg");
+    background-image: url("/images-4/1B-TCR-wide.jpg");
     background-position: center center; 
     background-repeat: no-repeat;
     background-attachment: fixed;
