--- a/src/styles.css
+++ b/src/styles.css
@@ -71,6 +71,7 @@ p {
     margin-bottom: 50px;
 }
 
+
 .about-section p {
     display: block;
     font-size: 17px;
@@ -99,9 +100,17 @@ p {
     margin-bottom: 0;
 }
 
+.projects h6 {
+    color: var(--text-color);
+    font-weight: lighter;
+    display: block;
+    text-align: center;
+}
+
 .projects p {
     text-align: center;
     margin-bottom: 3px;
+    font-style: italic;
 }
 
 .project-description .btn-branding {
