Updated about text

--- a/src/styles.css
+++ b/src/styles.css
@@ -5,7 +5,7 @@
     /* --text-color: #FBEEC1; */
     --text-color: #EDF5E1;
     --accent-color: #bc986a;
-    --hover-color: #8EE4AF;
+    --hover-color: rgb(227, 250, 182);
     /* --background-color: #e7717D; */
     
 }
@@ -25,7 +25,7 @@ body {
 
 
 h1, h2, h3 {
-    color: whitesmoke; 
+    color: white; 
     text-align: center;
     font-weight: lighter;
 }
@@ -70,7 +70,7 @@ p {
     color: var(--text-color);
     font-size: 35px;
     display: block;
-    margin-top: 90px;
+    margin-top: 56px;
     margin-bottom: 50px;
 }
 
@@ -88,13 +88,13 @@ p {
 .transparent-field {
     /* background-color: #ffffff;
     opacity: 0.6; */
-    background: rgba(23, 41, 29, 0.6);
+    background: rgba(23, 41, 29, 0.9);
 }
 
 
 .projects h1 {
     font-size: 35px;
-    margin-top: 75px;
+    margin-top: 53px;
     display: block; 
 }
 
@@ -156,8 +156,7 @@ hr {
     color: var(--text-color);
     font-size: 55px;
     display: block;
-    margin-top: 95px;
-    margin-bottom: 50px;
+    margin-top: 22%;
     padding-top: 25px;
 }
 
@@ -173,12 +172,11 @@ hr {
     color: var(--hover-color);
 }
 
-
 .contact-section p {
     display: block;
     font-size: 20px;
     text-align: center;
-    padding-bottom: 42px;
+    padding-bottom: 25px;
     /* margin: 25 auto;
     padding: 0 150px 0 150px; */
     /* background: rgba(0, 0, 0, 0.9) */
@@ -191,9 +189,9 @@ hr {
     background: rgba(23, 41, 29, 0.6);
 }
 
-footer .contact {
+/* footer .contact {
     margin-top: 175px;
-}
+} */
 
 .footer-home {
     position: fixed;
